2003-06-12  Don Melton  <gramps@apple.com>

	Since Richard didn't actually correct the fix for 3288532 in
	WebBackForwardList.m, I've backed out out his original fix entirely.

        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList setCapacity:]):

2003-06-12  Richard Williamson   <rjw@apple.com>

	Correct fix for 3288532.

        * History.subproj/WebBackForwardList.m:

2003-06-12  Richard Williamson   <rjw@apple.com>

	Fixed 3288532.  When setCapacity: shrinks capacity, trim
	the back/forward list.  Setting to zero will effectively
	flush the list.

        Reviewed by John.

        * History.subproj/WebBackForwardList.m:

2003-06-12  Richard Williamson   <rjw@apple.com>

	Fixed 3221078.  Maintain a seperate width map
	for substitute fonts to avoid collision of glyph
	codes.

        Reviewed by Chris & Gramps.

        * WebCoreSupport.subproj/WebTextRenderer.h:
        * WebCoreSupport.subproj/WebTextRenderer.m:

=== Safari-84 ===

2003-06-12  Darin Adler  <darin@apple.com>

        Fixed by Richard, reviewed by me.

	- fixed 3289047 -- REGRESSION: can't go back after using form at attwireless.com

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge reportClientRedirectToURL:delay:fireDate:lockHistory:isJavaScriptFormAction:]):
        Added isJavaScriptFormAction parameter, passed on to frame.

        * WebView.subproj/WebFramePrivate.h: Added isJavaScriptFormAction parameter.
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _clientRedirectedTo:delay:fireDate:lockHistory:isJavaScriptFormAction:]):
        If isJavaScriptFormAction is YES, then don't treat this is a "quick redirect" which is
        merged with the previous page for purposes of back/forward.

2003-06-11  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3289577>: Reenable Carbon Java plug-ins when in Carbon app

        Reviewed by gramps.

        * Plugins.subproj/WebPluginDatabase.m: